[package]
name = "GraphLayout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
imageproc = "0.23.0"
image="0.24.5"
rusttype="0.9.2"
rand="0.8.5"

[[bin]]
name = "GraphLayout"
path = "src/main.rs"
